--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/main_icon"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -21,7 +21,6 @@
         <activity android:name=".Worker" />
         <activity android:name=".OWSLA" />
         <activity android:name=".LogReg">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
