--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,9 @@
         android:icon="@drawable/main_icon"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/main_icon"
         android:supportsRtl="true"
         android:theme="@style/NoBar">
-        <activity android:name=".OWSLASetting" />
         <activity android:name=".OWSLAAssistant" />
         <activity android:name=".OWSLAProgram" />
         <activity android:name=".OWSLATeam" />
